--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
           </div>
         </div>
       </form>
+      <br></br><br></br>
       <form>
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
@@ -48,7 +49,9 @@
         </form>
         <form>
             <div class="form-row">
+                <div class="col-lg-12">
                 <input type="text" class="form-control" placeholder="Type your message here...">
+                </div>
             </div>
         </form>
 </body>
