--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
       <h1>Contact Me!</h1>
       <form>
         <div class="form-row">
-          <div class="col">
+          <div class="col-sm-4">
             <input type="text" class="form-control" placeholder="First name">
           </div>
-          <div class="col">
+          <div class="col-sm-4">
             <input type="text" class="form-control" placeholder="Last name">
           </div>
         </div>
@@ -42,14 +42,14 @@
       <form>
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
+          <div class="col-sm-8">
             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
           </div>
         </div>
         </form>
         <form>
-            <div class="form-row">
-                <div class="col-lg-12">
+            <div class="form">
+                <div class="col-lg-10">
                 <input type="text" class="form-control" placeholder="Type your message here...">
                 </div>
             </div>
