--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       </nav>
       <h1>Contact Me!</h1>
       <form>
-        <div class="form-row">
+        <div class="form">
           <div class="col-sm-4">
             <input type="text" class="form-control" placeholder="First name">
           </div>
@@ -38,10 +38,8 @@
           </div>
         </div>
       </form>
-      <br></br><br></br>
       <form>
-        <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+        <div class="form">
           <div class="col-sm-8">
             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
           </div>
