--- a/contact.html
+++ b/contact.html
@@ -29,33 +29,17 @@
       </nav>
       <h1>Contact Me!</h1>
       <form>
-        <div class="form">
-          <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="First name">
-          </div>
-          <br></br><br></br>
-          <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="Last name">
-          </div>
+        <div class="contact-form">
+          <form id=contact-form method="post" action="">
+              <input name="name" type="text" class="form-control" placeholder="First and Last Name" required><br>
+
+              <input name="email" type="email" class="form-control" placeholder="Please enter a valid E-mail address" required><br>
+
+              <textarea name="message" class="form-control" placeholder="Message" rows="4" required></textarea><br>
+
+              <input type="submit" class="form-control submit" value="SEND IT TO ME!">
+          </form>
         </div>
-      </form>
-      <br></br><br></br>
-      <form>
-        <div class="form">
-          <div class="col-sm-8">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-          </div>
-        </div>
-        </form>
-        <br></br><br></br>
-        <form>
-            <div class="form">
-                <div class="col-lg-10">
-                <input type="text" class="form-control" placeholder="Type your message here...">
-                </div>
-            </div>
-        </form>
-        <br></br><br></br>
 </body>
 </html>
 
