Boo Out, Ben In

--- a/index.html
+++ b/index.html
@@ -34,19 +34,16 @@
 	
       <div class="col-sm-6">
         <div class="panel panel-primary">
-          <div class="panel-heading">About Boo</div>
+          <div class="panel-heading">About Me</div>
           <div class="panel-body">
+            <br>
             <p>
-              Boo the dog belongs to a San Francisco-based Facebook employee who created a Facebook page for the dog with a statement "My name is Boo. I am a dog. Life is good." He became popular in October 2010 after singer Ke$ha sent a tweet that she had a new boyfriend, linking to the page.
-            </p> 
+              My name is Benjamin Smith and I was born in Raleigh, North Carolina, having lived in Johnston County all my life. I currently live with my parents and have two sisters: my sister Liz (age 20) with whom I share two nephews, Alex (13) and Andrew (8) from my other sister Vanessa (33).</p> 
             <p>
-              Chronicle Books, noticing that Boo had 5 million Facebook fans at the time, approached the owner to write a picture book. In August 2011, Boo: The Life of the World's Cutest Dog, written by his owner under pen name J.H. Lee, was published. The book was eventually published in ten languages. A second book followed, Boo: Little Dog in the Big City, as well as a calendar and plans for a cut-out book and additional children's books. He also has his own stuffed animal for kids. His merchandise includes a Gund stuffed animal.
+              I have taken programming courses at Campbell University starting in 2016, building a life and obtaining a B.S. in Information Technology with a concentration in Information Security. I have strengths when it comes to security consulting. I graduated from Campbell University with said degree in 2020, and I am currently participating in the UNC Coding Boot Camp in order to improve my programming skills and to know the computer more intimately.
             </p>
             <p>
-              Boo was appointed a spokesdog for Virgin America airline, which featured photos of him in an airplane along with advice for people traveling with pets. In April 2012, Boo was the subject of a death hoax after #RIPBOO appeared on Facebook. Tweets followed as Gizmodo writer Sam Biddle tweeted Boo had died. It was later confirmed by The Chronicle Book staff that Boo was alive and well. In July 2012, Boo was named the Official Pet Liaison of Virgin America.
-            </p>
-            <p>
-              Read more at: <a href="https://en.wikipedia.org/wiki/Boo_(dog)">https://en.wikipedia.org/wiki/Boo_(dog)</a>
+              I also obtained a minor in Spanish from Campbell, travelling to Spain during the Summer of 2019. I love foreign languages, history, philosophy, and politics, among other things. I realize that both computer and foreign languages represent the way of the future. This is a future that I have a desire to be involved in.
             </p>
           </div>
         </div>
