--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <div class="panel-body">
             <br>
             <p>
-              My name is Benjamin Smith and I was born in Raleigh, North Carolina, having lived in Johnston County all my life. I currently live with my parents and have two sisters: my sister Liz (age 20) with whom I share two nephews, Alex (13) and Andrew (8) from my other sister Vanessa (33).</p> 
+              My name is Benjamin Smith (age 22) and I was born in Raleigh, North Carolina, having lived in Johnston County all my life. I currently live with my parents and have two sisters: my sister Liz (age 20) with whom I share two nephews, Alex (13) and Andrew (8) from my other sister Vanessa (33).</p> 
             <p>
               I have taken programming courses at Campbell University starting in 2016, building a life and obtaining a B.S. in Information Technology with a concentration in Information Security. I have strengths when it comes to security consulting. I graduated from Campbell University with said degree in 2020, and I am currently participating in the UNC Coding Boot Camp in order to improve my programming skills and to know the computer more intimately.
             </p>
             <p>
-              I also obtained a minor in Spanish from Campbell, travelling to Spain during the Summer of 2019. I love foreign languages, history, philosophy, and politics, among other things. I realize that both computer and foreign languages represent the way of the future. This is a future that I have a desire to be involved in.
+              I also obtained a minor in Spanish from Campbell, travelling to Spain during the Summer of 2019. I love foreign languages, history, philosophy, and politics, among other things. I realize that both computer and foreign languages represent the way of the future. This is a future that I have a desire to be involved in because 1) it represents a way to serve and protect my country, 2) coding and Information Technology in general give me the experience and skills that I need to protect victims of cybersex trafficking, and 3) the need for computer security and security consultants within government agencies as well as private businesses is increasingly widespread.
             </p>
           </div>
         </div>
