--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
       <div class="col-sm-6">
           <div>
-            <img class="img-responsive" src="https://img.buzzfeed.com/buzzfeed-static/static/2015-04/21/16/enhanced/webdr05/enhanced-31550-1429646952-7.jpg">
+            <img class="img-responsive" src="0.jpg">
           </div>
       </div>
   
