--- a/portfolio.html
+++ b/portfolio.html
@@ -28,3 +28,32 @@
         </div>
       </nav>
 
+      <div class="col-sm-6">
+        <div>
+          <img class="img-responsive" src="0.jpg">
+        </div>
+    </div>
+  
+      <div class="col-sm-6">
+          <div>
+            <img class="img-responsive" src="2012_1112BenScoutsEagleNov120143.JPG">
+            <p>My Mother, myself, my sister, and my father before a Cotillion Ball at the Capital City Club.</p>
+          </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div>
+          <img class="img-responsive" src="MeDesk.PNG">
+          <p>Me, chillin'.</p>
+        </div>
+       </div>
+
+       <div class="col-sm-6">
+        <div>
+          <img class="img-responsive" src="2012_1112BenScoutsEagleNov120064.JPG">
+          <p>My great-aunt, my grandmother, and my other grandmother at the Angus Barn (filler pic).</p>
+        </div>
+    </div>
+
+</body>
+</html>
