--- a/portfolio.html
+++ b/portfolio.html
@@ -31,27 +31,27 @@
 
       <div class="col-sm-6">
         <div>
-          <img class="img-responsive" src="0.jpg">
+          <img class="img-responsive" src="0.jpg" alt= "bio-image">
         </div>
     </div>
   
       <div class="col-sm-6">
           <div>
-            <img class="img-responsive" src="2012_1112BenScoutsEagleNov120143.JPG">
+            <img class="img-responsive" src="2012_1112BenScoutsEagleNov120143.JPG" alt= "bio-image-2">
             <p>My Mother, myself, my sister, and my father before a Cotillion Ball at the Capital City Club.</p>
           </div>
       </div>
 
       <div class="col-sm-6">
         <div>
-          <img class="img-responsive" src="MeDesk.PNG">
+          <img class="img-responsive" src="MeDesk.PNG" alt= "bio-image-3">
           <p>Me, chillin'.</p>
         </div>
        </div>
 
        <div class="col-sm-6">
         <div>
-          <img class="img-responsive" src="2012_1112BenScoutsEagleNov120064.JPG">
+          <img class="img-responsive" src="2012_1112BenScoutsEagleNov120064.JPG" alt= "bio-image-4">
           <p>My great-aunt, my grandmother, and my other grandmother at the Angus Barn (filler pic).</p>
         </div>
     </div>
