--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="col-sm-6">
         <div>
-          <img class="img-responsive" src="0.jpg" alt= "#main-bio">
+          <img class="img-responsive" src="0.png" alt= "#main-bio">
         </div>
     </div>
   
