--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
       <div class="col-sm-6">
         <div>
-          <img class="img-responsive" src="0.jpg" alt= "#bio-image">
+          <img class="img-responsive" src="0.png" alt= "#bio-image">
         </div>
     </div>
 
