--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
         </div>
       </div>
 
-      <div class="col-sm-6">
-        <div>
+      <div id="#main-bio" class="col-sm-6">
           <img class="img-responsive" src="0.png" alt= "#main-bio">
-        </div>
-    </div>
+       </div>
   
     </div>
 </body>
