--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <p>
               I also obtained a minor in Spanish from Campbell, travelling to Spain during the Summer of 2019. I love foreign languages, history, philosophy, and politics, among other things. I realize that both computer and foreign languages represent the way of the future. This is a future that I have a desire to be involved in because 1) it represents a way to serve and protect my country, 2) coding and Information Technology in general give me the experience and skills that I need to protect victims of cybersex trafficking, and 3) the need for computer security and security consultants within government agencies as well as private businesses is increasingly widespread.
             </p>
+            <p>
+              Please see the Contact page for contact information.
+            </p>
           </div>
         </div>
       </div>
