getting there. will need advice.

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,20 +35,20 @@
       <p>GitHub pages link: <a href="https://github.com/Bsmi3275">https://github.com/Bsmi3275</a></p>
       <p>LinkedIn profile link: <a href="https://www.linkedin.com/in/benjamin-smith-0384b31b5/">https://www.linkedin.com/in/benjamin-smith-0384b31b5/</a></p>
       <br />
-      <p>Downloadable Resume: <a href="PDF_Resume.pdf" download="Resumepdf">Downloadable Resume</a></p>
+      <p>Downloadable Resume: <a href="Resume (06_16_2020).pdf" download="Resumepdf">Downloadable Resume</a></p>
       <br />
       <h5>I know it is not much now, but I am making progress. Here are some small examples of that progress.</h5>
       <h5>Project 1 (which I completed alongside my colleagues Alex, Thomas, and Reed.</h5>
       <p><a href="https://exploringparksduringcovid.live/"></a> Project link</p>
       <p><a href="https://github.com/tutchings/exploringParksDuringCovidLiveSearch"></a> GitHub Repository</p>
       <br />
-
+      <span class="image"><img src="ProjectImage.PNG"></span>
       <br />
       <h5>Weather Dashboard Homework</h5>
       <p><a href="https://bsmi3275.github.io/WeatherDashboard/"> Link to deployed page</a></p>
       <p><a href="https://github.com/Bsmi3275/WeatherDashboard"> GitHub Repository</a></p>
       <br />
-
+      <span class="image"><img src="HomeworkImage.PNG"></span>
       <br />
 </body>
 </html>
