--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
           </ul>
         </div>
       </nav>
- 
-      <h4>My Information: </h4>
+
+      <h1>My Information</h1>
       <br />
       <br />
       <p>GitHub pages link: <a href="https://github.com/Bsmi3275">https://github.com/Bsmi3275</a></p>
