--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
           </ul>
         </div>
       </nav>
-      
+      <h1>Contact Me</h1>
       <form>
         <div class="contact-form">
           <form id=contact-form method="post" action="">
